[project]
name = "skatelog"
version = "0.1.0"
description = "A CLI for tracking skateboarding sessions"
readme = "README.md"
authors = [
    { name = "Corey Beres", email = "skatelog@cberes.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
]

[project.scripts]
skatelog = "skatelog:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
